# ShieldMail

./: .env.dist  .gitignore  Makefile  Pipeline.mk  docker-compose.yml  pyproject.toml
.github/workflows/: makefile.yml
dockerfiles/python/: Dockerfile
src/: config.py  di.py
src/api/: app.py
src/api/routes/: auth.py  callbacks.py  user.py
src/models/: oauth.py
test/unit/api/: test_app.py
test/unit/api/routes/: test_user.py
