[tool.poetry]
name = "shieldmail"
version = "0.1.0"
description = "Protect you privacy"
authors = ["Uday Kiran Padhy"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
httpx = "^0.25.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
black = "^23.12.0"
mypy = "^1.7.1"
mutmut = "^2.4.4"
coverage = "^7.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
