[tool.poetry]
name = "shieldmail"
version = "0.1.0"
description = "Protect you privacy"
authors = ["Uday Kiran Padhy"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
uvicorn = { extras = ["standard"], version = "^0.24.0.post1" }
httpx = "^0.25.2"
pydantic-settings = "^2.1.0"
lagom = "^2.6.0"
python-dotenv = "^1.0.0"
logtail-python = "^0.2.9"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
black = "^23.12.0"
mypy = "^1.7.1"
mutmut = "^2.4.4"
coverage = "^7.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = [
    "E501", # line too long
    "B008", # do not perform function call ... in argument defaults - needed for Depends/Header of fastapi
]

[tool.ruff.per-file-ignores]
"tests/**" = ["E402"]  # ignore imports that are not at the top of the file, which we allow in tests

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# these packages don't have type hints, stop mypy complaining about them
module = ["logtail"]
ignore_missing_imports = true